[package]
name = "ocid"
version = "0.0.0"
authors = ["Nikolai Vazquez"]
description = "\"Ocean Content IDs\" for the Ocean package manager."
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/oceanpkg/ocid"
repository = "https://github.com/oceanpkg/ocid"
documentation = "https://docs.rs/ocid"
categories = ["no-std", "data-structures", "encoding"]
keywords = ["oceanpkg", "file", "hash", "content", "cid"]
include = ["Cargo.toml", "src", "README*", "CHANGELOG*", "LICENSE*"]

[features]
default = ["blake3"]

[dependencies]
blake3 = { version = "0.1.3", optional = true }
rand_core = { version = "0.5", optional = true }

[dev-dependencies]
rand_core = { version = "0.5.1", features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
